fucking yeah! Its working

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
             .red {
             }
         </style>
-        <script src="hockey.js"></script>
+        <script src="/Hockey/hockey.js"></script>
     </head>
     <body>
         <canvas id="rink" width="400" height="600"></canvas>
